--- a/11.html
+++ b/11.html
@@ -1,11 +1,11 @@
 
 <html>
 	<body>
-		<FORM ACTION="http://localhost/html/11.php" METHOD="POST">
+		<form ACTION="http://localhost/html/11.php" method="POST">
 		<P>
-			Name: <INPUT TYPE=text NAME="name" value=""> <BR>
-			Address 1: <INPUT TYPE=text NAME="addr1" value=""><BR>
-			Address 2: <INPUT TYPE=text NAME="addr2" value=""><BR>
+			Name: <input type=text NAME="name" value=""> <BR>
+			Address 1: <input type=text NAME="addr1" value=""><BR>
+			Address 2: <input type=text NAME="addr2" value=""><BR>
 			email: <INPUT TYPE=text NAME="email" value=""><BR>
 			<INPUT TYPE=submit>
 		</FORM>
