--- a/11.html
+++ b/11.html
@@ -1,9 +1,8 @@
 
 <html>
 	<body>
-		<form ACTION="http://localhost/html/11.php" method="POST">
-		<P>
-			Name: <input type=text NAME="name" value=""> <BR>
+		<form action="http://localhost/html/11.php" method="POST">
+			Name: <input type=text name"name" value=""> <BR>
 			Address 1: <input type=text NAME="addr1" value=""><BR>
 			Address 2: <input type=text NAME="addr2" value=""><BR>
 			email: <INPUT TYPE=text NAME="email" value=""><BR>
