--- a/11.html
+++ b/11.html
@@ -2,12 +2,12 @@
 <html>
 	<body>
 		<form action="http://localhost/html/11.php" method="POST">
-			Name: <input type=text name"name" value=""> <BR>
-			Address 1: <input type=text NAME="addr1" value=""><BR>
-			Address 2: <input type=text NAME="addr2" value=""><BR>
-			email: <INPUT TYPE=text NAME="email" value=""><BR>
-			<INPUT TYPE=submit>
-		</FORM>
+			Name: <input type=text name"name" value=""> <br>
+			Address 1: <input type=text name="addr1" value=""><br>
+			Address 2: <input type=text name="addr2" value=""><br>
+			email: <input type=text name="email" value=""><br>
+			<input type=submit>
+		</form>
 	</body>
 </html>
 
