--- a/1a.html
+++ b/1a.html
@@ -5,7 +5,7 @@
             var n=prompt("enter a number");
             if(n!=null && n>0)
                 {
-                    document.write("<h1>First " + n + " fibonacci numbers are: </h1><br>");
+                    document.write("<h1>First " + n + " Fibonacci numbers are: </h1><br>");
                     if(n==1)
                         document.write("<h1>" + fib1 + "</h1><br>");
                     else
