--- a/2a.html
+++ b/2a.html
@@ -12,9 +12,9 @@
                         var b=a.toLowerCase;
                         var str=b.search(/^[1-4][a-z][a-z][0-9][0-9][a-z][a-z][0-9][0-9][0-9]/);
                         if(str==0)
-                            alert("usn is valid");
+                            alert("Usn is valid");
                         else
-                            alert("usn is invalid");
+                            alert("Usn is invalid");
                     }
             </script>
         <form onsubmit=finder()>
